@@ -1,5 +1,5 @@
 AC_INIT(src/mod_mono.c)
-AM_INIT_AUTOMAKE(mod_mono, 0.9)
+AM_INIT_AUTOMAKE(mod_mono, 0.9.99)
 AM_CONFIG_HEADER(include/mod_mono_config.h:config.in)
 
 AC_PROG_CC
@@ -276,7 +276,12 @@ AC_SUBST(CFLAGS)
 AC_SUBST(MONO_CFLAGS)
 AC_SUBST(MONO_LIBS)
 
-AC_OUTPUT(Makefile src/Makefile man/Makefile)
+AC_OUTPUT(
+Makefile
+src/Makefile
+man/mod_mono.8
+man/Makefile
+)
 
 echo "---"
 echo "Configuration summary for mod_mono"
