@@ -1,2 +1,2 @@
 man_MANS = mod_mono.8
-EXTRA_DIST = mod_mono.8
+EXTRA_DIST = mod_mono.8.in
