@@ -8,7 +8,8 @@
 .if t .sp .5v
 .if n .sp
 ..
-.TH mod_mono 0.x "mod_mono 0.x"
+
+.TH mod_mono "8" "19 May 2004" "mod_mono @VERSION@" "ASP.NET Support for Apache"
 .SH NAME
 mod_mono \- apache module that enables ASP.NET pages. Works together with mod-mono-server.exe
 .SH DESCRIPTION
@@ -47,7 +48,7 @@ Default value: "/usr/bin/mod-mono-server.exe"
 .I "MonoApplications (used only when MonoRunXSP is True)"
 This value will be passed to mod-mono-server.exe in the
 --applications option. It is
-.I mandatory
+.B mandatory
 if MonoRunXSP is True.
 .TP
 .I "MonoWapiDir"
@@ -57,6 +58,14 @@ Default value: "/tmp"
 .TP
 .I "MonoDocumentRootDir (used only when MonoRunXSP is True)"
 The directory passed in --root argument when launching mod-mono-server.
+.TP
+.I "MonoApplicationsConfigFile (used only when MonoRunXSP is True)"
+The argument passed in --appconfigfile argument to mod-mono-server.
+Default value: NULL.
+.TP
+.I "MonoApplicationsConfigDir (used only when MonoRunXSP is True)"
+The argument passed in --appconfigdir argument to mod-mono-server.
+Default value: NULL.
 .SH SAMPLE CONFIGURATION
 For Apache 1.3, with mod-mono-server.exe from package xsp installed in
 prefix=/usr:
@@ -83,15 +92,19 @@ prefix=/usr:
       </Directory>
 .fi
 .SH ENVIRONMENT VARIABLES
-.TP
-It may modify MONO_PATH, PATH and MONO_SHARED_DIR.
+.PP
+It may modify MONO_PATH, PATH and MONO_SHARED_DIR when starting
+mod-mono-server.
 .SH FILES
 .PP
 httpd.conf
+.SH AUTHORS
+mod_mono was written by Daniel Ridruejo (daniel rawbyte com) and Gonzalo
+Paniagua Javier (gonzalo@ximian.com).
 .SH MAILING LISTS
 Visit http://mail.ximian.com/mailman/mono-list for details.
 .SH WEB SITE
 Visit: http://www.go-mono.com for details
 .SH SEE ALSO
-.BR mcs(1), mono(1), xsp(1)
+.BR xsp (1), mod-mono-server (1), mono (1), mcs (1)
 
